nao/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nao
  labels:
    app: nao
spec:
  type: ClusterIP
  selector:
    app: nao
  ports:
    - name: http
      port: 80
      targetPort: http
